fixed package.json to be compatible with yarn

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "name": "Sebastian Zaha",
         "email": "sebastian.zaha@gmail.com"
     },
-    "licenses": "MIT",
-    "dependencies": "sprockets-chain"
+    "license": "MIT",
+    "dependencies": {
+        "sprockets-chain": "^0.0.16"
+    }
 }
